--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Rubik');
+
+body{
+    font-size: 16px;
+    font-family: 'Rubik';
+    font-weight: 400;
+
+    background-color: hsl(228, 33%, 97%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
