--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -45,16 +45,16 @@
           <p>{{comment["createdAt"]}}</p>
         </div>
         <div class="delete button-big" *ngIf="isUser">
-          <img  src="../../assets/images/icon-delete.svg">
+          <img  src="assets/images/icon-delete.svg">
           <p style="display: inline;"><strong>Delete</strong></p>
         </div>
 
         <div class="edit button-big"  *ngIf="isUser">
-          <img  src="../../assets/images/icon-edit.svg">
+          <img  src="assets/images/icon-edit.svg">
           <p style="display: inline;"><strong>Edit</strong></p>
         </div>
         <div class="reply button-big" (click)="reply()" *ngIf="!isUser">
-          <img  src="../../assets/images/icon-reply.svg">
+          <img  src="assets/images/icon-reply.svg">
           <p style="display: inline;"><strong>Reply</strong></p>
         </div>
       </div>
